Fixed Spicetify Theme

--- a/Themes/Everforest/.config/spicetify/Themes/Dribbblish/color.ini
+++ b/Themes/Everforest/.config/spicetify/Themes/Dribbblish/color.ini
@@ -8,8 +8,8 @@ player             = 232A2E
 card               = 232A2E
 shadow             = 000000
 selected-row       = 797979
-button             = 232A2E
-button-active      = 343F44 
+button             = 414B4F
+button-active      = 414B4F
 button-disabled    = D3C6AA
 tab-active         = 1E2233
 notification       = 1db954
