--- a/Themes/Everforest/.config/spicetify/Themes/Dribbblish/color.ini
+++ b/Themes/Everforest/.config/spicetify/Themes/Dribbblish/color.ini
@@ -18,7 +18,8 @@ misc               = BFBFBF
 progress-fg        = CAA9E0
 progress-bg        = 91B1F0
 
-[white]
+
+[...]
 text               = 363636
 subtext            = 3D3D3D
 sidebar-text       = FFF9F4
@@ -193,7 +194,7 @@ selected-row       = 797979
 button             = 31748f
 button-active      = 31748f
 button-disabled    = 555169
-tab-active         = ebbcba
+tab-active         = 31748f
 notification       = 1db954
 notification-error = eb6f92
 misc               = 6e6a86
