--- a/Themes/Everforest/.config/spicetify/Themes/Dribbblish/color.ini
+++ b/Themes/Everforest/.config/spicetify/Themes/Dribbblish/color.ini
@@ -1,16 +1,16 @@
 [base]
-text               = 86918A
-subtext            = 4E565C
-sidebar-text       = 86918A
-main               = 232A2E
-sidebar            = 343F44
-player             = 232A2E
-card               = 232A2E
+text               = FFFFFF
+subtext            = B9BBBE
+sidebar-text       = FFFFFF
+main               = 0F1212
+sidebar            = 202222
+player             = 0F1212
+card               = 0F1212
 shadow             = 000000
 selected-row       = 797979
-button             = 414B4F
-button-active      = 414B4F
-button-disabled    = D3C6AA
+button             = 607767
+button-active      = 607767
+button-disabled    = 607767
 tab-active         = 1E2233
 notification       = 1db954
 notification-error = e22134
@@ -18,8 +18,7 @@ misc               = BFBFBF
 progress-fg        = CAA9E0
 progress-bg        = 91B1F0
 
-
-[...]
+[white]
 text               = 363636
 subtext            = 3D3D3D
 sidebar-text       = FFF9F4
@@ -194,7 +193,7 @@ selected-row       = 797979
 button             = 31748f
 button-active      = 31748f
 button-disabled    = 555169
-tab-active         = 31748f
+tab-active         = ebbcba
 notification       = 1db954
 notification-error = eb6f92
 misc               = 6e6a86
