--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -41,22 +41,22 @@ round-borders-exclude = [
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+#shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 15;
+#shadow-radius = 15;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -15;
+#shadow-offset-x = -15;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -15;
+#shadow-offset-y = -15;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -154,11 +154,11 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+frame-opacity = 1.0;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0 
@@ -289,8 +289,8 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 experimental-backends = true;
-backend = "glx";
-#backend = "xrender";
+# backend = "glx";
+backend = "xrender";
 
 
 # Enable/disable VSync.
