--- a/Themes/Cozy/.config/cava/config
+++ b/Themes/Cozy/.config/cava/config
@@ -183,7 +183,7 @@
 # Noise reduction, float 0 - 1. default 0.77
 # the raw visualization is very noisy, this factor adjusts the integral and gravity filters to keep the signal smooth
 # 1 will be very slow and smooth, 0 will be fast but noisy.
- noise_reduction = 0.77
+; noise_reduction = 0.77
 
 
 [eq]
