--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,3 @@
-import = ["~/.config/alacritty/colors.toml", "~/.config/alacritty/fonts.toml"]
-live_config_reload = true
 
 
 [cursor]
@@ -26,3 +24,7 @@ lines = 24
 [window.padding]
 x = 30
 y = 30
+
+[general]
+live_config_reload = true
+import = ["~/.config/alacritty/colors.toml", "~/.config/alacritty/fonts.toml"]
